GL/Projet_GL/src/test/deca/context/invalid/classes/inexistante.deca
// Description:
// Test contextuel : appel d'une méthode inexistante.
//
// Resultats:
//    Erreur: Identifier f is not defined
//    Ligne X: Methode inexistante.
//


class A {
}
{
    A a;
    a.f();
}
